<resources>
    <string name="app_name">Courses</string>

    <string name="account">Аккаунт</string>
    <string name="login">Вход</string>
    <string name="title">Тысячи курсов\nв одном месте</string>
    <string name="main_fragment">Main fragment</string>
    <string name="favorites_fragment">Favorites fragment</string>
    <string name="image_of_courses">Изображение курсов</string>
    <string name="image_of_course">Изображение курса</string>
    <string name="going_to_the_login_page">Переход на страницу входа в систему</string>
    <string name="label_continue">Продолжить</string>
    <string name="email">Email</string>
    <string name="hint_text_email">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="hint_text_input_password">Введите пароль</string>
    <string name="content_description_login">Вход в систему</string>
    <string name="do_not_have_an_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="nav_main">Главная</string>
    <string name="nav_favorites">Избранное</string>
    <string name="nav_account">Аккаунт</string>
    <string name="go_to_main_screen">Переход к главному экрану</string>
    <string name="go_to_favorite_screen">Переход к экрану избранное</string>
    <string name="go_to_account_screen">Переход к экрану аккаунт</string>
    <string name="icon_add_favorites">Добавление в избранное</string>
    <string name="detailed_info_course">Подробная информация о курсе</string>
    <string name="price_label">₽</string>
    <string name="list_of_courses">Список курсов</string>
    <string name="search_courses">Search courses...</string>
    <string name="courses_filter">Фильтр курсов</string>
    <string name="detailed">Подробнее</string>
    <string name="sort">По дате добавления</string>
    <string name="vk_page">Переход на страницу Вконтакте</string>
    <string name="ok_page">Переход на страницу Одноклассники</string>
</resources>