<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".presentation.MainFragment">

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_bar"
        android:drawablePadding="18dp"
        android:gravity="start|center"
        android:letterSpacing="0.025"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/search_courses"
        android:textColor="@color/white_opacity_50"
        app:drawableLeftCompat="@drawable/search_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/iv_filter"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/search_bar"
        android:contentDescription="@string/courses_filter"
        android:scaleType="center"
        android:src="@drawable/icon_filter"
        app:layout_constraintBottom_toBottomOf="@id/tv_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_search" />

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="6dp"
        android:gravity="start|center"
        android:letterSpacing="0.01"
        android:text="@string/sort"
        android:textColor="@color/green"
        android:textSize="@dimen/text_medium"
        app:drawableRightCompat="@drawable/icon_arrow_down_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_courses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/list_of_courses"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort"
        tools:listitem="@layout/course_item" />

</androidx.constraintlayout.widget.ConstraintLayout>