<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="236dp"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/dark_gray"
    app:cardCornerRadius="12dp">

    <ImageView
        android:id="@+id/iv_course"
        android:layout_width="wrap_content"
        android:layout_height="114dp"
        android:contentDescription="@string/image_of_course"
        android:scaleType="centerCrop"
        android:src="@drawable/course_image_0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cover"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="46dp"
                android:layout_height="22dp"
                android:background="@drawable/glass_background"
                android:drawablePadding="5dp"
                android:gravity="start|center"
                android:letterSpacing="0.04"
                android:paddingStart="7dp"
                android:paddingEnd="2dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:drawableLeftCompat="@drawable/green_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="4.9" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/glass_background"
                android:gravity="center"
                android:letterSpacing="0.04"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_rate"
                tools:text="22 Мая 2024" />

            <ImageView
                android:id="@+id/iv_icon_favorites"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/glass_circle"
                android:contentDescription="@string/icon_add_favorites"
                android:scaleType="center"
                android:src="@drawable/icon_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_cover">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:letterSpacing="0.015"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Java-разработчик с нуля" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/dark_gray"
                android:letterSpacing="0.04"
                android:textColor="@color/white_opacity_70"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="Освойте backend-разработку\nи программирование на Java, фреймворки..." />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/dark_gray"
                android:letterSpacing="0.015"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_text"
                tools:text="999" />

            <TextView
                android:id="@+id/tv_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_gray"
                android:letterSpacing="0.015"
                android:text="@string/price_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_text" />

            <TextView
                android:id="@+id/tv_detailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:background="@color/dark_gray"
                android:gravity="center_vertical"
                android:letterSpacing="0.04"
                android:text="@string/detailed"
                android:textColor="@color/green"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toStartOf="@id/iv_icon_detailed_info_course"
                app:layout_constraintTop_toBottomOf="@id/tv_text" />

            <ImageView
                android:id="@+id/iv_icon_detailed_info_course"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="@color/dark_gray"
                android:contentDescription="@string/detailed_info_course"
                android:paddingTop="2dp"
                android:scaleType="center"
                android:src="@drawable/icon_detailed_info_course"
                app:layout_constraintBottom_toBottomOf="@id/tv_detailed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detailed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>